bugfix: spacing on categories

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -792,6 +792,7 @@ pre code {
 
 .category-header {
   border-bottom: 1px solid var(--border-color);
+  padding-bottom: var(--spacing-lg);
 }
 
 .category-header h2 {
